get supported locales endpoint
