# internal/routers/system_settings.go
@@ -12,6 +12,7 @@ func BuildSystemSettingsRouter(tokenValidator *jwtmiddleware.JWTMiddleware) *chi
 
 	systemSettingsRouter.Use(middleware.MoveJWTCookieToHeader, tokenValidator.CheckJWT)
 	systemSettingsRouter.Get("/", handlers.GetSystemSettings)
+	systemSettingsRouter.Get("/supportedLocales", handlers.GetSupportedLocales)
 	systemSettingsRouter.Put("/", handlers.UpdateSystemSettings)
 
 	return systemSettingsRouter
